--- a/index.html
+++ b/index.html
@@ -9,8 +9,6 @@
   </head>
   <body>
 
-    <h1>CUMA TESTING,NGGK HARUS DIPAKE</h1>
-
     <!-- navbar -->
     <div class="container-fuild top-navbar">
         <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 px-3 mb-4 border-bottom">
@@ -35,6 +33,10 @@
         </header>
       </div>
     <!-- navbar -->
+
+    <!-- content -->
+    <h1>CUMA TESTING,NGGK HARUS DIPAKE</h1>
+    <!-- content -->
 
     <!-- footer -->
     <div class="container">
